0.0.4  (2011-12-13)
===================

* Fixes a error in tinyMCE adaptor when the user has not edit permission

0.0.3  (2011-12-09)
===================

* More easy overwrite the jquery-ui
* More clean the code of tiny field

0.0.2  (2011-12-08)
===================

* Complete the README


0.0.1  (2011-12-08)
===================

* First version to AdaptorAutoCompleteForeingKeyField and AdaptorAutoCompleteManyToManyField
* First version to AdaptorImageThumbnailField
* First version to AdaptorTinyMCEField