@@ -1,0 +1,5 @@
+include README.rst
+include AUTHORS
+include CHANGES
+include *.py
+recursive-include inplaceeditform_extra_fields/templates *
